@@ -11,8 +11,12 @@ Lib/
   string of digits
 * Support for X-SUBST in schema element class LDAPSyntax
 * Support for X-ORDERED and X-ORIGIN in schema element class AttributeType
+* ldapurl: New scope 'subordinates' defined in 
+  draft-sermersheim-ldap-subordinate-scope
 
 Modules/
+* New constant ldap.SCOPE_SUBORDINATE derived from ldap.h for 
+  draft-sermersheim-ldap-subordinate-scope
 
 ----------------------------------------------------------------
 Released 2.4.14 2014-01-31
@@ -1092,4 +1096,4 @@ Released 2.0.0pre02 2002-02-01
 ----------------------------------------------------------------
 Released 1.10alpha3 2000-09-19
 
-$Id: CHANGES,v 1.315 2014/03/12 21:44:10 stroeder Exp $
+$Id: CHANGES,v 1.316 2014/03/12 23:02:42 stroeder Exp $
